Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
-<head>
+<DOCTYPE html>
   
-</head>
+  <head>
+  <title>This is the title Title</title>
+  </head>
+  <body>
+  
+  
+  </body>
+
+</DOCTYPE>
