--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
   
   <head>
   <title>This is the title Title</title>
@@ -7,5 +7,3 @@
   
   
   </body>
-
-</DOCTYPE>
